--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==3.0.0
-openpyxl==3.1.2
 flask-cors==4.0.0
 Werkzeug==3.0.1
+requests==2.31.0
+# openpyxl==3.1.2  # commented out – Excel integration disabled
